# ws-api

./: .env.exemple  .gitignore  Dockerfile  pyproject.toml
ws_api/: __init__.py  __main__.py  bucket.py  database.py  loadenv.py  wsopencv.py
ws_api/assets/: data.py
ws_api/controllers/: data.py  health.py  mode.py  page.py  result.py  session.py  user.py
ws_api/middlewares/: authorization.py  validation.py
ws_api/models/: users.py
ws_api/repositories/: data.py  data_repository.py  mode.py  page.py  result.py  session.py  session_repository.py  user.py  user_repository.py
ws_api/routers/: data_router.py  health_router.py  session_router.py  user_router.py
ws_api/schemas/: data.py  mode.py  page.py  result.py  session.py  user.py
ws_api/seed/: main.py  mode_seed.py  page_seed.py
ws_api/services/: data.py  mode.py  page.py  result.py  session.py  user.py
ws_api/utils/: HEICtoJPG.py  base64.py  bucket.py  cammel_snake.py  data_manipulator.py  decode.py  decode_utils.py  histogram.py  image.py  image_class.py  image_manipulator.py
