[tool.poetry]
name = "ws-api"
version = "0.1.0"
description = ""
authors = ["Tallispt <tallispt@gmail.com>"]
readme = "README.md"
packages = [{ include = "ws_api" }]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
bcrypt = "^4.0.1"
flask = "^2.3.2"
flask-cors = "^3.0.10"
flask-pymongo = "^2.3.0"
marshmallow = "^3.19.0"
flask-httpauth = "^4.8.0"
pyjwt = "^2.7.0"
flask-compress = "^1.13"
firebase-admin = "^6.5.0"
pandas = "^2.2.2"
statsmodels = "^0.14.2"

[tool.poetry.scripts]
start = "gunicorn ws_api.__main__:app"
dev = "ws_api.__main__:test"
seed = "ws_api.seed.main:seed_all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
